--- a/template/index.templ.html
+++ b/template/index.templ.html
@@ -88,7 +88,7 @@
 
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
 <script src="/sodium.js" async></script>
-<script src="/index.js" async></script>
+<script type="module" src="/index.js"></script>
 </body>
 
 </html>
